[tool.poetry]
name = "repl_python3_beta_SilkyFlawedFolders"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.26.0"
wordcloud = "^1.8.1"
fileupload = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
